feat(deps): add pom.xml with library package